--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
@@ -36,7 +36,7 @@
 				font-family: $font-03;
 				font-size: rem(100px);
 				font-variant: none;
-				text-shadow: 3px 2px 0 rgba($color-02, 0.65);
+				text-shadow: 2px 2px 0 rgba($color-02, 0.65);
 				a:hover {
 					color: $color-01;
 				}
@@ -408,38 +408,67 @@
 }
 
 .mobile-menu-button {
-	padding: 10px 20px;
 	cursor: pointer;
+	text-align: center;
+	@include sizing(70px, 70px);
+	border-radius: 100%;
+	border: 0;
+	position: fixed;
+	top: 20px;
+	right: 20px;
+	z-index: 9999;
+	background: $color-10;
 	.mobile-menu-icon, .mobile-menu-text {
 		@include inline-block(middle);
 	}
 	.mobile-menu-icon {
-		@include sizing(30px, 20px);
+		@include sizing(25px, 20px);
 		position: relative;
-		.line, &:before, &:after {
+		margin: 15px auto 0 auto;
+		.lines {
+			position: relative;
 			display: block;
-			@include sizing(100%, 4px);
-			background: $color-01;
-			position: absolute;
-			left: 0;
+			@include sizing(100%, 100%);
+			.line, &:before, &:after {
+				display: block;
+				@include sizing(100%, 4px);
+				background: $color-01;
+				position: absolute;
+				left: 0;
+			}
+			&:before, &:after {
+				content: '';
+			}
+			.line {
+				top: 0;
+			}
+			&:before {
+				top: 8px;
+			}
+			&:after {
+				top: 16px;
+			}
 		}
-		&:before, &:after {
-			content: '';
-		}
-		.line {
-			top: 0;
-		}
-		&:before {
-			top: 8px;
-		}
-		&:after {
-			top: 16px;
+		.fa-times {
+			font-size: rem(20px);
+			margin: 0;
 		}
 	}
 	.mobile-menu-text {
-		padding: 0 0 0 5px;
-		margin: 2px 0 0 0;
-		font-size: rem(16px);
+		display: block;
+		margin: 2.5px 0 0 0;
+	}
+	.close {
+		display: none;
+	}
+}
+
+.mobile-open .mobile-menu-button {
+	.open {
+		display: none;
+	}
+	.close {
+		display: block;
 	}
 }
 
