--- a/khyeras/styles/khyeras_v1/template/overall_header.html
+++ b/khyeras/styles/khyeras_v1/template/overall_header.html
@@ -80,6 +80,16 @@
 		<a id="top" class="top-anchor" accesskey="t"></a>
 
 		<header id="page-header">
+			<div class="mobile-menu-button">
+				<span class="mobile-menu-icon">
+					<span class="lines open"><span class="line"></span></span>
+					<i class="icon fa fa-times close" aria-hidden="true"></i>
+				</span>
+				<span class="mobile-menu-text">
+					<span class="open">Menu</span>
+					<span class="close">Close</span>
+				</span>
+			</div>			
 			<!-- EVENT overall_header_navbar_before -->
 			<nav id="mobile-menu">
 				<header class="mobile-menu-header">
@@ -145,7 +155,7 @@
 
 		<!-- EVENT overall_header_page_body_before -->
 
-		<section id="page-body" class="page-body<!-- IF SCRIPT_NAME == 'index' or SCRIPT_NAME == 'viewforum' or SCRIPT_NAME == 'search' --> has-listing<!-- ENDIF-->" role="main">
+		<section id="page-body" class="page-body<!-- IF SCRIPT_NAME == 'index' or SCRIPT_NAME == 'viewforum' or SCRIPT_NAME == 'viewtopic' or SCRIPT_NAME == 'search' --> has-listing<!-- ENDIF-->" role="main">
 			<div class="wrapper">
 				<a id="start_here" class="anchor"></a>
 				<!-- IF S_BOARD_DISABLED and S_USER_LOGGED_IN and (U_MCP or U_ACP) -->
