--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_header.scss
@@ -530,13 +530,19 @@
 		}
 	}
 	& > ul {
-		.dropdown-container {
+		li {
 			left: 0;
 			@include transition(left 0.5s ease-in-out);
+			position: relative;
+		}
+		.dropdown-container {
 			& > a {
 				padding-right: 70px;
 			}
-			& > .icon {
+			& > .fa-chevron-down {
+				display: none;
+			}
+			& > .fa-chevron-right {
 				@include sizing(50px, 100%);
 				max-height: 44px;
 				line-height: 44px;
@@ -586,16 +592,16 @@
 				    z-index: 2;
 				}
 			}
-			&.dropdown-close {
-				left: -($mobile-menu-width + 300);
-				height: 0;
-				overflow: hidden;
-				padding: 0;
-				border: 0;
-				& > * {
-					display: none;
-				}
+			&.dropdown-close > * {
+				display: none;
 			}
+		}
+		.dropdown-close {
+			left: -($mobile-menu-width + 300);
+			height: 0;
+			overflow: hidden;
+			padding: 0;
+			border: 0;
 		}
 	}
 }
