--- a/khyeras/styles/khyeras_v1/template/navbar_header.html
+++ b/khyeras/styles/khyeras_v1/template/navbar_header.html
@@ -1,5 +1,8 @@
 <nav class="navbar" role="navigation">
 	<ul>
+		<li>
+			<a href="http://google.com"><span>None drop down link</span></a>
+		</li>
 		<li class="dropdown-container">
 			<a href="http://google.com"><span>About</span></a>
 			<i class="icon icon-lg fa-chevron-down dropdown-trigger"></i>
