Minor changes for responsive

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
@@ -13,11 +13,9 @@
 		position: absolute;
 		top: 0;
 		right: 0;
-		&, li {
-			@include inline-block(middle);
-		}
 		li {
-			&.responsive-menu {
+			@include inline-block(middle);
+			&.hidden {
 				display: none;
 			}
 		}
