--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
@@ -237,6 +237,8 @@
 					font-size: rem(20px);
 					font-weight: normal;
 					overflow: hidden;
+					text-overflow: ellipsis;
+					white-space: nowrap;
 					& + br {
 						display: none;
 					}
@@ -480,6 +482,44 @@
 ========================================================================== */
 
 @include respond(em(450)) {
+	// layout.scss
+	.forabg, .forumbg, .post, .panel {
+		border-width: 10px;
+	}
+	.action-bar .pagination ul {
+		float: none;
+		margin-top: 10px;
+	}
+	// viewlisting.scss
+	$responsive-icon-size: $list-icon-size - 8px;
+	.topiclist {
+		& > li.row dl {
+			dt .row-item-link {
+				@include sizing($responsive-icon-size + 2, $responsive-icon-size + 2);
+			}
+			&[class*='read'], &[class*='link'], &[class*='moved'] {
+				dt {
+					min-height: $responsive-icon-size + 1;
+					&:before {
+						@include sizing($responsive-icon-size, $responsive-icon-size);
+						line-height: $responsive-icon-size;
+						font-size: rem(16px);
+					}
+				}
+			}
+		}
+		&.forums > li.row dl.has-forum-image {
+			dt .row-item-link, &[class*='read'] dt:before, &[class*='link'] dt:before,
+			&[class*='moved'] dt:before, &[class*='mine'] dt:after {
+				top: 5px;
+			}
+			&[class*='read'], &[class*='link'], &[class*='moved'] {
+				dt .forumtitle {
+					padding-left: 62px;
+				}
+			}
+		}
+	}
 	// header.scss
 	#page-welcome .site-callouts, #featured-content {
 		.flex-row {
@@ -491,10 +531,14 @@
 	}
 	#notification_list {
 		.header {
-			padding-right: 20px;
-			.header_settings {
-				position: static;
-				display: block;
+			padding-right: 50px;
+			.header_settings a {
+				font-size: 0;
+				&:before {
+					@include font-awesome;
+					content: unicode($icon-cogs);
+					font-size: rem(14px);
+				}
 			}
 		}
 		ul li {
@@ -519,16 +563,10 @@
 	}
 }
 
-/* 421 Breakpoint
+/* 397 Breakpoint
 ========================================================================== */
 
-@include respond(em(421)) {
-	// layout.scss
-	.action-bar .pagination ul {
-		float: none;
-		margin-top: 10px;
-	}
-
+@include respond(em(397)) {
 	// header.scss
 	#notification_list {
 		top: 70px;
