--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
@@ -48,6 +48,7 @@ $font-03: 'Selima', $sans-serif-fb;
 $icon-check: \f00c;
 $icon-check-circle: \f058;
 $icon-chevron-right: \f054;
+$icon-cogs: \f085;
 $icon-envelope: \f0e0;
 $icon-exclamation: \f12a;
 $icon-exclamation-circle: \f06a;
@@ -71,8 +72,9 @@ $icon-youtube: \f16a;
 /* Other
 ========================================================================== */
 
-$main-margin: 30px;
-$mobile-menu-width: 300px;
+$alt-field-width: 50%;
 $form-field-indent1: 300px;
 $form-field-indent2: 200px;
-$alt-field-width: 50%;
+$list-icon-size: 40px;
+$main-margin: 30px;
+$mobile-menu-width: 300px;
