--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
@@ -189,6 +189,9 @@ fieldset.polls dl dt {
 				position: absolute;
 				top: 1px;
 				left: 20%;
+				input[type='checkbox'] {
+					margin: 0;
+				}
 				& + .resultbar {
 					padding-left: 40px;
 				}
