--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
@@ -189,7 +189,7 @@ fieldset.polls dl dt {
 				position: absolute;
 				top: 1px;
 				left: 20%;
-				input[type='checkbox'] {
+				input[type='checkbox'], input[type='radio'] {
 					margin: 0;
 				}
 				& + .resultbar {
