Hide breadcrumbs on ucp/mcp and fix toggle for deleted posts

--- a/khyeras/_dev/styles/khyeras_v1/template/overall_header.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/overall_header.html
@@ -130,7 +130,7 @@
 			<!-- INCLUDE header_featured.html -->
 		<!-- ENDIF -->
 
-		<!-- IF SCRIPT_NAME != 'index' -->
+		<!-- IF SCRIPT_NAME != 'index' and SCRIPT_NAME != 'mcp' and SCRIPT_NAME != 'ucp' -->
 			<nav id="nav-breadcrumbs" class="nav-breadcrumbs linklist navlinks" role="menubar">
 				<div class="wrapper">
 					<ul class="breadcrumbs">
