--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
@@ -58,6 +58,7 @@ $icon-gplus: \f0d5;
 $icon-heart: \f004;
 $icon-inbox: \f01c;
 $icon-twitter: \f099;
+$icon-search: \f002;
 $icon-skype: \f17e;
 $icon-sort-asc: \f0de;
 $icon-sort-desc: \f0dd;
