--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
@@ -54,11 +54,14 @@ $icon-exclamation: \f12a;
 $icon-exclamation-circle: \f06a;
 $icon-exclamation-triangle: \f071;
 $icon-facebook: \f09a;
+$icon-file-o: \f016;
 $icon-gplus: \f0d5;
 $icon-heart: \f004;
 $icon-inbox: \f01c;
 $icon-twitter: \f099;
 $icon-search: \f002;
+$icon-search-minus: \f010;
+$icon-search-plus: \f00e;
 $icon-skype: \f17e;
 $icon-sort-asc: \f0de;
 $icon-sort-desc: \f0dd;
