Fixed responsive tabs and private message menu

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -537,7 +537,7 @@
 	& > ul {
 		list-style: none;
 		margin: 0;
-		@include flex-flow(row nowrap);
+		@include flex-flow(row wrap);
 		align-items: flex-end;
 		& > .tab {
 			margin: 0 2px 0 0;
@@ -546,6 +546,7 @@
 			}
 			& > a {
 				display: block;
+				white-space: nowrap;
 				padding: 5px 10px;
 				color: $color-01;
 				background: $color-10;
