--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
@@ -15,11 +15,14 @@
 		list-style: none;
 		li {
 			margin: 0 0 5px 0;
-			&.active-subsection {
-				a {
-					font-weight: bold;
-					color: $color-07;
-				}
+			a[href*='folder']:before {
+				@include rpg-icons;
+				content: unicode($icon-book-cover-02);
+				margin: 0 5px 0 0;
+			}
+			&.active-subsection a {
+				font-weight: bold;
+				color: $color-07;
 			}
 		}
 	}
@@ -364,10 +367,14 @@ fieldset.display-actions .button2 + div, fieldset.display-actions .button1 + div
 ========================================================================== */
 
 .cp-menu .cp-mini .mini .pm-legend {
+	position: relative;
+	padding: 0 0 0 27px;
 	.imageset {
-		@include inline-block(top);
+		display: block;
+		position: absolute;
+		top: 0;
+		left: 0;
 		@include sizing(16px, 16px);
-		margin: 0 5px 0 0;
 		border-radius: 3px;
 	}
 	&.pm_marked_colour .imageset {
