--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
@@ -202,6 +202,11 @@
 			}
 		}
 	}
+
+	// cp.scss
+	.topiclist > li dl dd.moderation {
+		flex: 0 0 275px;
+	}
 }
 
 /* 768 Breakpoint
@@ -362,6 +367,31 @@
 			}
 		}
 	}
+	table.table1.responsive {
+		thead {
+			display: none;
+		}
+		tbody, tr, td {
+			display: block;
+		}
+		tr {
+			padding: 20px;
+			&:first-child {
+				border-top: 1px dashed $color-04;
+			}
+		}
+		td {
+			padding: 0;
+			width: auto !important;
+			dfn {
+				display: inline !important;
+				position: static;
+				&:after {
+					content: ': ';
+				}
+			}
+		}
+	}
 
 	// viewtopic.scss
 	.post {
@@ -412,6 +442,42 @@
 		dd.profile-rank {
 			margin: 0 0 3px 0;
 			font-size: rem(16px);
+		}
+	}
+
+	// cp.scss
+	.cp-main .topiclist > li {
+		dl {
+			display: block;
+			position: relative;
+			dt {
+				.responsive-show {
+					display: block !important;
+				}
+			}
+			dd:not(.mark) {
+				display: none;
+			}
+		}
+		&.row dl dt .list-inner.with-mark {
+			padding-right: 30px;
+		}
+	}
+	.cp-main .topiclist > li.header dl dt .list-inner.with-mark,
+	.mcp-main #mcp_queue .topiclist > li.header dl dt .list-inner {
+		padding-right: 50px;
+	}
+	.cp-main .topiclist > li dl dd.mark,
+	.mcp-main #mcp_queue .topiclist > li.header dl:after {
+		position: absolute;
+		top: 0;
+		right: 0;
+	}
+	.mcp-main #mcp_queue ~ .panel table.table1 {
+		th, td {
+			&:first-child {
+				width: auto;
+			}
 		}
 	}
 
@@ -666,6 +732,23 @@
 		margin-top: 40px;
 	}
 
+	// cp.scss
+	.cp-main .topiclist > li dl dd.mark {
+		position: static;
+		&:before {
+			content: 'Mark: ';
+		}
+	}
+	.cp-main .topiclist > li.header dl dt .list-inner.with-mark,
+	.cp-main .topiclist > li.row dl dt .list-inner.with-mark,
+	.mcp-main #mcp_queue .topiclist > li.header dl dt .list-inner {
+		padding-right: 0;
+	}
+	.cp-main .topiclist > li.header dl dd.mark,
+	.mcp-main #mcp_queue .topiclist > li.header dl:after {
+		display: none;
+	}
+
 	// header.scss
 	#featured-content .flex-row .flex-column .image-wrap {
 		padding-bottom: 0;
@@ -744,6 +827,13 @@
 				left: -100px;
 				right: 0;
 			}
+		}
+	}
+
+	// cp.scss
+	.cp-main {
+		.panel, .post.pm, .topicreview {
+			padding: 10px 10px 0 10px;
 		}
 	}
 
