--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewlisting.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewlisting.scss
@@ -24,7 +24,10 @@
 					left: -9999px;
 				}
 				&.mark {
-					flex: 0 0 85px;
+					flex: 0 0 60px;
+					input[type='checkbox'], input[type='radio'] {
+						margin-right: 0;
+					}
 				}
 				&.topics, &.posts, &.views, &.extra {
 					flex: 0 0 120px;
