Responsive and desktop changes to viewlisting

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewlisting.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewlisting.scss
@@ -33,6 +33,7 @@
 					flex: 0 0 120px;
 				}
 				&.option {
+					// Option should be half of info width
 					flex: 0 0 125px;
 				}
 				&.lastpost, &.time, &.info {
@@ -188,8 +189,6 @@
 		@include forum-icon($icon-stabbed-note);
 	}
 }
-
-
 
 /* Forums
 ========================================================================== */
