--- a/khyeras/_dev/styles/khyeras_v1/template/overall_header.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/overall_header.html
@@ -155,7 +155,7 @@
 
 		<!-- EVENT overall_header_page_body_before -->
 
-		<section id="page-body" class="page-body<!-- IF SCRIPT_NAME == 'index' or SCRIPT_NAME == 'viewforum' or SCRIPT_NAME == 'viewtopic' or SCRIPT_NAME == 'search' --> has-listing<!-- ENDIF-->" role="main">
+		<section id="page-body" class="page-body<!-- IF SCRIPT_NAME == 'index' or SCRIPT_NAME == 'viewforum' or SCRIPT_NAME == 'viewtopic' or SCRIPT_NAME == 'search' --> styled-listing<!-- ELSE--> simple-listing<!-- ENDIF-->" role="main">
 			<div class="wrapper">
 				<a id="start_here" class="anchor"></a>
 				<!-- IF S_BOARD_DISABLED and S_USER_LOGGED_IN and (U_MCP or U_ACP) -->
