--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -243,7 +243,7 @@
 		line-height: 1;
 		li {
 			@include inline-block(middle);
-			&.active span, .button {
+			&.active span, a {
 				padding: 0 5px;
 			}
 			&.active span {
@@ -251,13 +251,16 @@
 				color: $color-06;
 				font-weight: bold;
 			}
-			.button {
+			a {
 				background: none;
 				border-radius: 0;
+				color: $color-01;
+				line-height: normal;
 				&, & .icon {
 					@include transition(color 0.3s ease-in-out);
 					&:hover {
 						color: $color-06;
+						background: none;
 					}
 				}
 			}
