--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
@@ -9,22 +9,27 @@
 	}
 
 	// viewlisting.scss
-	.topiclist.forums > li.row dl.has-forum-image {
-		padding-left: 130px;
-		min-height: 110px;
-		dt .forum-image {
-			@include sizing(110px, 110px);
+	.topiclist {
+		 & > li dl dd {
+			&.topics, &.posts, &.views {
+				flex: 0 0 80px;
+			}
+			&.lastpost, &.time, &.info {
+				flex: 0 0 180px;
+			}
+			&.moderation {
+				flex: 0 0 300px;
+			}
+			&.redirect {
+				flex: 0 0 340px;
+			}
 		}
-	}
-	.has-listing .topiclist li dl dd {
-		&.topics, &.posts, &.views {
-			flex: 0 0 80px;
-		}
-		&.lastpost {
-			flex: 0 0 180px;
-		}
-		&.redirect {
-			flex: 0 0 340px;
+		&.forums > li.row dl.has-forum-image {
+			padding-left: 130px;
+			min-height: 110px;
+			dt .forum-image {
+				@include sizing(110px, 110px);
+			}
 		}
 	}
 
@@ -32,6 +37,10 @@
 	.cp-menu {
 		flex: 0 0 150px;
 	}
+	.section-ucp-manage-groups .topiclist > li dl dd.info {
+		flex: 0 0 250px;
+	}
+
 
 	// header.scss
 	#featured-content .flex-row .flex-column {
@@ -71,7 +80,26 @@
 	}
 
 	// viewlisting.scss
-	.has-listing .topiclist {
+	.topiclist {
+		&.forums > li.row dl dd.topics, &.topics > li.row dl dd.posts {
+			&:after {
+				content: '/';
+				position: relative;
+				right: -12.5px;
+			}
+		}
+		&.topics > li.row dl dt {
+			.responsive-hide, .pagination {
+				display: block;
+				width: auto;
+			}
+			.pagination {
+				text-align: left;
+				margin-top: 5px;
+			}
+		}
+	}
+	.styled-listing .topiclist {
 		& > li {
 			dl dd {
 				&.lastpost, &.redirect {
@@ -106,23 +134,6 @@
 					flex: 1 1 100%;
 					order: 1;
 				}
-			}
-		}
-		&.forums > li.row dl dd.topics, &.topics > li.row dl dd.posts {
-			&:after {
-				content: '/';
-				position: relative;
-				right: -12.5px;
-			}
-		}
-		&.topics > li.row dl dt {
-			.responsive-hide, .pagination {
-				display: block;
-				width: auto;
-			}
-			.pagination {
-				text-align: left;
-				margin-top: 5px;
 			}
 		}
 	}
@@ -201,11 +212,6 @@
 				display: none;
 			}
 		}
-	}
-
-	// cp.scss
-	.topiclist > li dl dd.moderation {
-		flex: 0 0 275px;
 	}
 }
 
@@ -367,31 +373,6 @@
 			}
 		}
 	}
-	table.table1.responsive {
-		thead {
-			display: none;
-		}
-		tbody, tr, td {
-			display: block;
-		}
-		tr {
-			padding: 20px;
-			&:first-child {
-				border-top: 1px dashed $color-04;
-			}
-		}
-		td {
-			padding: 0;
-			width: auto !important;
-			dfn {
-				display: inline !important;
-				position: static;
-				&:after {
-					content: ': ';
-				}
-			}
-		}
-	}
 
 	// viewtopic.scss
 	.post {
@@ -442,42 +423,6 @@
 		dd.profile-rank {
 			margin: 0 0 3px 0;
 			font-size: rem(16px);
-		}
-	}
-
-	// cp.scss
-	.cp-main .topiclist > li {
-		dl {
-			display: block;
-			position: relative;
-			dt {
-				.responsive-show {
-					display: block !important;
-				}
-			}
-			dd:not(.mark) {
-				display: none;
-			}
-		}
-		&.row dl dt .list-inner.with-mark {
-			padding-right: 30px;
-		}
-	}
-	.cp-main .topiclist > li.header dl dt .list-inner.with-mark,
-	.mcp-main #mcp_queue .topiclist > li.header dl dt .list-inner {
-		padding-right: 50px;
-	}
-	.cp-main .topiclist > li dl dd.mark,
-	.mcp-main #mcp_queue .topiclist > li.header dl:after {
-		position: absolute;
-		top: 0;
-		right: 0;
-	}
-	.mcp-main #mcp_queue ~ .panel table.table1 {
-		th, td {
-			&:first-child {
-				width: auto;
-			}
 		}
 	}
 
@@ -732,23 +677,6 @@
 		margin-top: 40px;
 	}
 
-	// cp.scss
-	.cp-main .topiclist > li dl dd.mark {
-		position: static;
-		&:before {
-			content: 'Mark: ';
-		}
-	}
-	.cp-main .topiclist > li.header dl dt .list-inner.with-mark,
-	.cp-main .topiclist > li.row dl dt .list-inner.with-mark,
-	.mcp-main #mcp_queue .topiclist > li.header dl dt .list-inner {
-		padding-right: 0;
-	}
-	.cp-main .topiclist > li.header dl dd.mark,
-	.mcp-main #mcp_queue .topiclist > li.header dl:after {
-		display: none;
-	}
-
 	// header.scss
 	#featured-content .flex-row .flex-column .image-wrap {
 		padding-bottom: 0;
@@ -827,13 +755,6 @@
 				left: -100px;
 				right: 0;
 			}
-		}
-	}
-
-	// cp.scss
-	.cp-main {
-		.panel, .post.pm, .topicreview {
-			padding: 10px 10px 0 10px;
 		}
 	}
 
